// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Ledger Ledger information query Return the block height 1`] = `1298333403`;

exports[`Integration Ledger blocks Returns blocks by id 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "1dbc81e3196ba4ab9dcb07e1c37bb28ae1c289c0707061f28b567c2f48698d50",
        "merkelRootHash": "0e5751c026e543b2e8ab2eb06099daa1d1e5df47778f7787faab45cdf12fe3a8",
        "number": 2,
        "previousBlockNo": 3,
        "size": 665,
        "slotNo": 1,
      },
      Object {
        "id": "d2210effd1b09da47998c7fc9e890beb1825114e734c343dd920829e781c6325",
        "merkelRootHash": "3d94dbe277e2a76fc0b1bbee29ff452658a4a01058c32eb2fd7b51d7e10fedab",
        "number": 43177,
        "previousBlockNo": 43180,
        "size": 2554,
        "slotNo": 43201,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration Ledger blocks Returns blocks by number 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "f0f7892b5c333cffc4b3c4344de48af4cc63f55e44936196f365a9ef2244134f",
        "merkelRootHash": "0e5751c026e543b2e8ab2eb06099daa1d1e5df47778f7787faab45cdf12fe3a8",
        "number": 1,
        "previousBlockNo": 2,
        "size": 665,
        "slotNo": 0,
      },
      Object {
        "id": "d2210effd1b09da47998c7fc9e890beb1825114e734c343dd920829e781c6325",
        "merkelRootHash": "3d94dbe277e2a76fc0b1bbee29ff452658a4a01058c32eb2fd7b51d7e10fedab",
        "number": 43177,
        "previousBlockNo": 43180,
        "size": 2554,
        "slotNo": 43201,
      },
      Object {
        "id": "d3fdc8c8ea4050cc87a21cb73110d54e3ec92f8ae76941e8a1957ed6e6a7e0b0",
        "merkelRootHash": "0e5751c026e543b2e8ab2eb06099daa1d1e5df47778f7787faab45cdf12fe3a8",
        "number": 30,
        "previousBlockNo": 31,
        "size": 667,
        "slotNo": 29,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration Ledger transactions Can return transactions in blocks as a nested array 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "d2210effd1b09da47998c7fc9e890beb1825114e734c343dd920829e781c6325",
        "merkelRootHash": "3d94dbe277e2a76fc0b1bbee29ff452658a4a01058c32eb2fd7b51d7e10fedab",
        "number": 43177,
        "previousBlockNo": 43180,
        "size": 2554,
        "slotNo": 43201,
        "transactions": Array [
          Object {
            "fee": 171246,
            "id": "21c52888aacf1061353d3795a09bb29d8382526e29e4983abe568a0b9562bd55",
            "inputs": Array [
              Object {
                "address": "5d79941ab8035a3ff52e4d25259d8002ab0c3f7b2499eca086ad730a",
                "sourceTxId": "494714ddea994bd321ce3a850ceb21416aad3f693dbd38ce47daf0269d93c26f",
                "sourceTxIndex": 0,
                "value": 408327657508,
              },
            ],
            "outputs": Array [
              Object {
                "address": "ac946cb9753fd7568768c9db335bb2250a153c6ca90fc549af2abc6e",
                "value": 158327486262,
              },
              Object {
                "address": "885b5e0fa4c941e76228e5ddc2a97e07bd67337d6239109a320a5c17",
                "value": 250000000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "a544893db34f32a1817aa1e2d19a8b39655df0d37ca77d882eeb639167b876a8",
            "inputs": Array [
              Object {
                "address": "03d2c8b86a00c1893754aba507161bcc2f3813dc228ba9430a073873",
                "sourceTxId": "2fd4e14f5c1dfa7026d872dd63e0ffe50cee0eb35b2493b4e0a9a8a52b62ab1b",
                "sourceTxIndex": 0,
                "value": 466152000000,
              },
            ],
            "outputs": Array [
              Object {
                "address": "dafc417d0467b23b3701bc66bd80bd67bbe1a4fe260c779271756994",
                "value": 466152000000,
              },
            ],
          },
        ],
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration Ledger transactions Returns null if for specific transaction lookup 1`] = `
Object {
  "data": Object {
    "transactions": Array [
      null,
      Object {
        "blockNo": 43181,
        "fee": 171246,
        "id": "21c52888aacf1061353d3795a09bb29d8382526e29e4983abe568a0b9562bd55",
        "inputs": Array [
          Object {
            "address": "5d79941ab8035a3ff52e4d25259d8002ab0c3f7b2499eca086ad730a",
            "value": 408327657508,
          },
        ],
        "outputs": Array [
          Object {
            "address": "ac946cb9753fd7568768c9db335bb2250a153c6ca90fc549af2abc6e",
            "value": 158327486262,
          },
          Object {
            "address": "885b5e0fa4c941e76228e5ddc2a97e07bd67337d6239109a320a5c17",
            "value": 250000000000,
          },
        ],
      },
      null,
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration Ledger transactions Returns transactions by IDs 1`] = `
Object {
  "data": Object {
    "transactions": Array [
      Object {
        "blockNo": 43181,
        "fee": 171246,
        "id": "21c52888aacf1061353d3795a09bb29d8382526e29e4983abe568a0b9562bd55",
        "inputs": Array [
          Object {
            "address": "5d79941ab8035a3ff52e4d25259d8002ab0c3f7b2499eca086ad730a",
            "value": 408327657508,
          },
        ],
        "outputs": Array [
          Object {
            "address": "ac946cb9753fd7568768c9db335bb2250a153c6ca90fc549af2abc6e",
            "value": 158327486262,
          },
          Object {
            "address": "885b5e0fa4c941e76228e5ddc2a97e07bd67337d6239109a320a5c17",
            "value": 250000000000,
          },
        ],
      },
      Object {
        "blockNo": 43182,
        "fee": 171246,
        "id": "d9e280725a54b956ed283e42820672894edf8d1f48b5af36d76ee32f88a79497",
        "inputs": Array [
          Object {
            "address": "394a27246e0a1d71fee07153db9415adeac1af2fb3e611e472264542",
            "value": 50805565602805,
          },
        ],
        "outputs": Array [
          Object {
            "address": "eeec9e381a95d3b64864cc96446232e5a9e6005ecc749dbeb9c73c80",
            "value": 50704353889014,
          },
          Object {
            "address": "0ea7532f5990f1f5acfc9da05be478160c0e3de06a17cf2628b7e005",
            "value": 101211542545,
          },
        ],
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
